# objmatch

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo.md
src/: arutil.cpp  arutil.h  builtin_signatures.h  builtin_signatures_include.s  crc32.cpp  crc32.h  elf2pj64_main.cpp  elfutil.cpp  elfutil.h  file_mapping_test.cpp  file_path.h  file_path_yaml.cpp  file_path_yaml.h  files_to_mapping.cpp  files_to_mapping.h  matcher.cpp  matcher.h  matcher_main.cpp  matcher_test.cpp  n64sig.cpp  n64sig.h  n64sig_main.cpp  n64sym.cpp  n64sym.h  n64sym_main.cpp  objmatch.cpp  objmatch.h  objmatch_main.cpp  objsig.cpp  objsig.h  objsig_main.cpp  pathutil.cpp  pathutil.h  section_pattern.cpp  section_pattern.h  signature.cpp  signature.h  signaturefile.cpp  signaturefile.h  splat_out.cpp  (+5 more)
src/object_test_src/: example.c  example.h  example_copy.c  example_copy.h  readme  start.c  start_copy.c
